tests/scripts/errors/parse/duplicate_local.cdo
FUNCTION f() {
    VAR x = 1;
    VAR x = 2;
    RETURN x;
}
print(f());
